--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "babel-node index.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/testhelper.js --recursive",
-    "test:watch": "npm run test --watch"
+    "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
   "author": "",
